added images for use cases + atom logo

--- a/data/projects/DigitalArchives.yaml
+++ b/data/projects/DigitalArchives.yaml
@@ -1,8 +1,8 @@
 modalID: 1
 title: Digital Archives
-subtitle: sub
-img: archive.jpeg
-preview: archive-preview.jpeg
+subtitle: Keeping digital archival materials for the future
+img: archives.jpg
+preview: archives-preview.jpg
 category: Use Cases
 description: "Permafrost has been designed for the use of archives and special collections units who are increasingly called to preserve born-digital materials received from donors or transferring units.<br><br>
 
