--- a/data/projects/RecordsManagement.yaml
+++ b/data/projects/RecordsManagement.yaml
@@ -1,7 +1,7 @@
 modalID: 3
 title: Records Management
-subtitle: sub
-img: placeholder.png
-preview: placeholder-preview.png
+subtitle: Ensuring authenticity, accessibility and reliability over time
+img: records.jpg
+preview: records-preview.jpg
 category: Use Cases
 description: "Records require robust preservation to ensure their continued value as evidence. This applies to records with archival retention, or even shorter retention periods that nevertheless are required to endure for many years prior to disposition. Permafrost can meet the needs of records managers by providing functions to ensure continued integrity and accessibility for business purposes through robust workflows for fixity checking, normalization and migration."
