--- a/data/projects/LibCollections.yaml
+++ b/data/projects/LibCollections.yaml
@@ -4,10 +4,10 @@ subtitle: Preserving the library’s diverse digital stacks
 img: collections.jpg
 preview: collections-preview.jpg
 category: Use Cases
-description: "Permafrost is a great fit for libraries looking to properly preserve digital collections in libraries, whether they are born-digital or digitized materials.<br><br>
+description: "Permafrost is a great fit for libraries looking to preserve digital collections in libraries, whether they are born-digital or digitized materials.<br><br>
 
-Over the past several decades, libraries have undertaken many large-scale digitization projects across many media types, including textual materials such as theses, photographs collections, audiovisual materials, and more. All of these valuable digital materials represent a significant investment of time and effort, and therefore require proper preservation to ensure their future viability, whether through robust metadata and file format validation, normalization to preservation-friendly formats, or the creation of access copies in formats suitable for users.<br><br>
+Over the past several decades, libraries have undertaken many large-scale digitization projects across many media types, including textual materials such as theses, photographs collections, audiovisual materials, and more. All of these valuable digital materials represent a significant investment of time and effort, and therefore require proper preservation to ensure their future viability, whether through robust metadata and file format validation, customizable normalization to preservation-friendly formats, or the creation of access copies in formats suitable for users.<br><br>
 
-The creation and capture of born-digital library materials are also now a day-to-day process for most libraries. These include theses and dissertations, web archiving projects, and collections from government, map and data libraries, and more.<br><br>
+The creation and capture of born-digital library materials are also now a day-to-day process for most libraries. These include theses and dissertations; web archiving projects; collections from government, map and data libraries; and more.<br><br>
 
 Integration with library digital repositories such as DSpace is also available at extra cost."
